# ta-proq

./: .gitignore  README.md  backend_filler.py  copy_cookie.js  problem_1.md  problem_2.md  problem_3.md  problem_4.md  prog_assign_schema.json  pyproject.toml  questions_by_yash.json  utils.py
examples/python/: assessment.yaml  function_type_and_modify_check_suffix.py.jinja  unit.yaml
examples/python/function_type_problems/: check_two_digit_even.md  sum_even_indices.md  sum_of_squares_of_keys.md
examples/python/io_type_problems/: sum_even_numbers.md
examples/python/problems/: delete_first_three.md
src/fillers/: __init__.py  backend_filler.py  filler.py  replit_filler.py
src/md2json/: __init__.py  md2json.py
src/proq/: __init__.py  cli.py  core.py  create.py  evaluate.py  export.py  models.py  parse.py  prog_langs.py  template_utils.py  upload.py  utils.py
src/proq/data/: runtimes.json
src/proq/filler/: filler.py  seek_filler.py  utils.py
src/proq/templates/: export_style.css  highlightjs_includes.html  katex_includes.html  proq_empty_template.md.jinja  proq_export_template.html.jinja  proq_template.html.jinja  proq_template.md.jinja  python_tools.html  seek_template.html.jinja  style.css
src/proq_filler/: __init__.py  cli.py  create.py  evaluate.py  export.py  filler.py  style.css  upload.py
src/proq_filler/templates/: proq_template.html.jinja
src/scripts/: proq_to_json.py  replit_testcase_filler.py
src/seek_filler/: __init__.py  proq_cli.py  proq_create.py  proq_evaluate.py  proq_filler.py  proq_gen.py  proq_to_json.py  proq_upload.py  style.css  utils.py
src/web_fillers/: __init__.py  backend_filler.py  filler.py  replit_filler.py
templates/: proq_template.md
