[project]
name = "proq"
version = "0.0.2"
description = "A command-line based tool for authoring programming questions at scale."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}

authors = [
  {name = "Livin Nector", email = "livinnector2001@gmail.com" }
]

dependencies = [
  "markdown-to-json","pyyaml","pydantic","bs4", "marko","Jinja2","playwright"
]

[project.optional-dependencies]

[project.urls]
[project.scripts]
proq = "proq.cli:main"


[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"proq.templates" = ["*"]