[project]
name = "proq"
version = "1.0.0"
description = "A command-line based tool for authoring programming questions at scale."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }

authors = [{ name = "Livin Nector", email = "livinnector2001@gmail.com" }]

dependencies = [
  "pyyaml",
  "pydantic",
  "marko",
  "Jinja2",
  "strenum>=0.4.15",
  "termcolor>=2.5.0",
]

[project.optional-dependencies]

[project.urls]
[project.scripts]
proq = "proq.cli:main"


[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"proq.templates" = ["*"]
"proq.data" = ["*"]

[dependency-groups]
dev = ["ruff>=0.7.2"]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "I", "W", "N", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]


[tool.ruff.lint.pydocstyle]
convention = "google"
